assets/css/style.css
:root {
    --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    --title-font-family: Montserrat, sans-serif;
}

@font-face {
    font-family: Montserrat;
    font-optical-sizing: auto;
    font-style: normal;
    font-display: swap;
    src: url(/assets/fonts/Montserrat-VariableFont_wght.woff2)format("woff2"), url(/assets/fonts/Montserrat-VariableFont_wght.ttf)format("truetype")
}

body {
    margin: 0;
}

header {
    position: relative;
    z-index: 2;
    height: 64px;
    background-color: rgba(0,0,0,.5);
    display: flex;
    align-items: center;
    box-shadow: none;
}

#nav_container {
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    align-items: center;
}

#nav_head {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-between;
    justify-items: center;
    margin-left: 12px;
}

@media not (max-width: 940px) {
    #nav_head {
        display: none;
    }
}

#nav_logo {
    display: block;
    padding: 8px 6px;
}

#nav_menu {
    display: block;
    border-radius: 100%;
    padding: 20px;
    margin-right: 24px;
}

#nav_menu_img {
    filter: brightness(0) invert(1);
}

#nav_menu:hover {
    background-color: hsla(0, 0%, 50%, .15);
}

#nav_menu:active {
    background-color: hsla(0, 0%, 50%, .25);
}

#nav {
    max-width: 940px;
    height: 100%;
    box-sizing: border-box;
    display: flex;
    justify-items: center;
    padding-left: 12px;
    margin: 0 auto;
}

@media (max-width: 940px) {
    #nav {
        display: none;
    }
}

#nav ul {
    display: flex;
    flex-direction: row;
    margin: 0;
}

#nav li {
    list-style: none;
    margin: 0;
    padding: 0;
}

#nav>ul>li>a {
    display: block;
    padding: 0px 16px;
    height: 100%;
    line-height: 64px;
    font-family: var(--title-font-family);
    color: #ffffff;
    text-decoration: none;
}

#nav_left {
    padding-left: 12px;
}

#nav_right {
    padding-left: 128px;
}

main {
    position: relative
}

